--- a/Stackless/changelog.txt
+++ b/Stackless/changelog.txt
@@ -10,6 +10,11 @@ What's New in Stackless 3.X.X?
 *Release date: 20XX-XX-XX*
 
 - https://github.com/stackless-dev/stackless/issues/265
+  Most (getter)-functions, (setter)-functions and (PyCFunction)-functions with
+  flag METH_NOARGS used to lack an unused last argument, "void *" for (getter)
+  and (setter), "PyObject *" for (PyCFunction)-functions.
+
+- https://github.com/stackless-dev/stackless/issues/265
   Avoid undefined behavior, if Stackless classes implement __reduce__() and
   __reduce_ex__() using a single C-function.
 
